@@ -13,7 +13,6 @@
 * [Setup](#setup)
   * [Beginning with simp_banners](#beginning-with-simp_banners)
 * [Usage](#usage)
-* [Limitations](#limitations)
 * [Development](#development)
 
 <!-- vim-markdown-toc -->
@@ -48,13 +47,6 @@ $banner_text = simp_banners::fetch('us/department_of_commerce')
 
 This module provides the `simp_banners::fetch()` function.  See
 [REFERENCE.md](REFERENCE.md) for more details.
-
-## Limitations
-
-SIMP Puppet modules are generally intended for use on Red Hat Enterprise Linux
-and compatible distributions, such as CentOS. Please see the [`metadata.json`
-file](./metadata.json) for the most up-to-date list of supported operating
-systems, Puppet versions, and module dependencies.
 
 ## Development
 
