@@ -1,7 +1,9 @@
 # Reference
 <!-- DO NOT EDIT: This document was generated by Puppet Strings -->
 
-## Functions
+## Table of Contents
+
+**Functions**
 
 * [`simp_banners::fetch`](#simp_bannersfetch): Retrieve a banner from the known list and format it according to the passed options
 
